# sales-data-processor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: ci.yml
notebooks/: data_exploration.py
src/sales_data_processor/: config.py  main.py
src/sales_data_processor/core/: exceptions.py  spark_session.py
src/sales_data_processor/extractors/: __init__.py  base_extractor.py  csv_extractor.py  exceptions.py  parquet_extractor.py
src/sales_data_processor/loaders/: __init__.py  base_loader.py  delta_loader.py  exceptions.py
src/sales_data_processor/processors/: __init__.py  base_processor.py  customer_processor.py  exceptions.py  sales_processor.py
tests/: conftest.py
tests/unit/: test_main.py
tests/unit/extractors/: test_csv_extactor.py  test_parquet_extractor.py
tests/unit/loaders/: test_delta_loader.py
tests/unit/processors/: __init__.py  test_customer_processor.py  test_sales_processor.py
